syntax = "proto3";

option csharp_namespace = "Generated";

message DateResponse
{
	string result = 1; 
}